--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "next": "latest",
     "react": "latest",
     "react-dom": "latest",
+    "react-icons": "^4.11.0",
     "react-slick": "^0.29.0",
     "react-spring": "^9.7.3",
     "slick-carousel": "^1.8.1",
